fix : hero section + Video

--- a/index.html
+++ b/index.html
@@ -144,11 +144,10 @@
 
       <div class="videoSection">
         <div class="videoOverlayText">
-          <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
-            <span style="color: #cd9c49">diam nonummy nibh</span> euismod
-            tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi
-            enim ad
+          <p class="reveal-type">
+            European
+            <span style="color: #cd9c49">Technology,</span><br>
+            Global Experience.
           </p>
         </div>
         <div class="videoOverlay"></div>
@@ -475,6 +474,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
     />
+    <script src="https://unpkg.com/split-type"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
