minor fixes in ecosystem

--- a/index.html
+++ b/index.html
@@ -325,12 +325,12 @@
 
       <!-- ecosystem start -->
       <section>
-        <div class="ecosystemContainer">
+        <div class="ecosystemContainer" style="height: fit-content;">
           <div class="title-holder">
             <h1 class="title">MATRAX <br />ECOSYSTEM</h1>
           </div>
 
-          <div class="card-text-content">
+          <div class="card-text-content" style="margin-bottom: 2rem;">
             <div class="text-container">
               <h4>Explore the MatraX Ecosystem</h4>
               <p>
