ecosystem done with responsiveness

--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@
       <!-- -------------------Logo Shrink Section------------------ -->
 
       <!-- ecosystem start -->
-      <section>
-        <div class="ecosystemContainer" style="height: fit-content;">
+      <section class="eco-section">
           <div class="title-holder">
             <h1 class="title">MATRAX <br />ECOSYSTEM</h1>
           </div>
@@ -343,12 +342,12 @@
             </div>
 
             <div class="card-container">
-              <div class="card" id="card1">
+              <div class="card-eco" id="card1">
                 <div class="card-title">
                   <span> MatraX Lubricants</span>
-                  <img src="./images/RightArrow.svg" alt="right arrow" />
+                  <img src="./images/RightArrow.svg" alt="right arrow" class="card-arrow" />
                 </div>
-                <div class="hidden-text max-text-w-expand">
+                <div class="card-text">
                   <h6>Engineered for Excellence</h6>
                   <p>
                     For a smoother, more efficient ride, explore our range of
@@ -357,13 +356,13 @@
                 </div>
               </div>
 
-              <div class="card" id="card2">
+              <div class="card-eco" id="card2">
                 <div class="card-title">
                   <span> MatraX Lubricants</span>
-                  <img src="./images/RightArrow.svg" alt="right arrow" />
+                  <img src="./images/RightArrow.svg" alt="right arrow" class="card-arrow" />
                 </div>
 
-                <div class="hidden-text max-text-w-expand">
+                <div class="card-text">
                   <h6>Engineered for Excellence</h6>
                   <p>
                     For a smoother, more efficient ride, explore our range of
@@ -372,7 +371,6 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </section>
       <!-- ecosystem end -->
