view button map fixed

--- a/index.html
+++ b/index.html
@@ -390,7 +390,10 @@
           </div>
         </div>
         <div class="globalPresenceImage">
-          <img src="./images/MAP.svg" alt="" />
+         <div class="gp-div-sm">
+           <img src="./images/MAP.svg" alt="" />
+           <button class="button-global-presence">view</button>
+         </div>
         </div>
       </section>
 
