horizontal section &navMenu responsiveness, three golden lines

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matrax Hero</title>
     <link
       rel="stylesheet"
@@ -146,7 +146,7 @@
         <div class="videoOverlayText">
           <p class="reveal-type">
             European
-            <span style="color: #cd9c49">Technology,</span><br>
+            <span style="color: #cd9c49">Technology,</span><br />
             Global Experience.
           </p>
         </div>
@@ -161,175 +161,191 @@
       <!-- ----------------Page 1 - Video Section------------- -->
 
       <!-- -------------Horizontal Scroll------------ -->
-
-      <section id="horizontal">
-        <h2>
-          PRECISION CRAFTED<br />
-          FOR PERFORMANCE ROADS
-        </h2>
-        <div class="horizontal__content">
-          <div class="horizontal__item up">
-            <div class="tyre_img_hor"><img src="./images/1.png" alt="" /></div>
-            <div class="content_hor">
-              <div class="left_content_hor">ultra high performance</div>
-              <div class="right_content_hor">urcola+</div>
-            </div>
-            <div class="on_hover_tyre_hor">MORE</div>
-          </div>
-
-          <div class="horizontal__item down">
-            <div class="tyre_img_hor"><img src="./images/2.png" alt="" /></div>
-            <div class="content_hor">
-              <div class="left_content_hor">high performance</div>
-              <div class="right_content_hor">miurra</div>
-            </div>
-            <div class="on_hover_tyre_hor">MORE</div>
-          </div>
-
-          <div class="horizontal__item up">
-            <div class="tyre_img_hor"><img src="./images/3.png" alt="" /></div>
-            <div class="content_hor">
-              <div class="left_content_hor">highway terrain</div>
-              <div class="right_content_hor">Veragua SV</div>
-            </div>
-            <div class="on_hover_tyre_hor">MORE</div>
-          </div>
-
-          <div class="horizontal__item up_up">
-            <div class="tyre_img_hor"><img src="./images/4.png" alt="" /></div>
-            <div class="content_hor">
-              <div class="left_content_hor">LIGHT TRUCK</div>
-              <div class="right_content_hor">Colmenar</div>
-            </div>
-            <div class="on_hover_tyre_hor">MORE</div>
-          </div>
-
-          <div class="horizontal__item up">
-            <div class="tyre_img_hor"><img src="./images/5.png" alt="" /></div>
-            <div class="content_hor">
-              <div class="left_content_hor">4 X 4</div>
-              <div class="right_content_hor">Veragua M/T</div>
-            </div>
-            <div class="on_hover_tyre_hor">MORE</div>
-          </div>
+      <div class="three-lines-wrapper" style="min-height: 200vh">
+        <div class="three-lines">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
         </div>
-      </section>
-
-      <!-- -------------Horizontal Scroll------------ -->
-
-      <!-- --------------Curved Carousal Section---------- -->
-
-      <div class="curvedScroll">
-        <section class="curved_container">
-          <h1 class="durability-header">
-            DURABILITY MEETS VERSATILITY ON EVERY ROAD
-          </h1>
-          <div class="carrousel-wrappper">
-            <!--    slide 1  -->
-            <div class="single-item empty-box"></div>
-            <!--    slide 2  -->
-            <div class="single-item empty-box"></div>
-
-            <!--    slide 1  -->
-            <div class="single-item">
-              <img src="./images/AT200.png" class="curveimage" />
-              <div class="sliderContCurveText">
-                <h1>Regional</h1>
-                <h2>SA405</h2>
+        <section id="horizontal">
+          <h2>
+            PRECISION CRAFTED<br />
+            FOR PERFORMANCE ROADS
+          </h2>
+          <div class="horizontal__content">
+            <div class="horizontal__item up">
+              <div class="tyre_img_hor">
+                <img src="./images/1.png" alt="" />
               </div>
-              <p class="hoverCurve">MORE</p>
+              <div class="content_hor">
+                <div class="left_content_hor">ultra high performance</div>
+                <div class="right_content_hor">urcola+</div>
+              </div>
+              <div class="on_hover_tyre_hor">MORE</div>
             </div>
 
-            <!--    slide 2  -->
-            <div class="single-item">
-              <img src="./images/SA400.png" class="curveimage" />
-              <div class="sliderContCurveText">
-                <h1>Longhaul</h1>
-                <h2>AT200</h2>
+            <div class="horizontal__item down">
+              <div class="tyre_img_hor">
+                <img src="./images/2.png" alt="" />
               </div>
-              <p class="hoverCurve">MORE</p>
+              <div class="content_hor">
+                <div class="left_content_hor">high performance</div>
+                <div class="right_content_hor">miurra</div>
+              </div>
+              <div class="on_hover_tyre_hor">MORE</div>
             </div>
 
-            <!--    slide 3  -->
-            <div class="single-item">
-              <img src="./images/SA405.png" class="curveimage" />
-              <div class="sliderContCurveText">
-                <h1>on&off</h1>
-                <h2>SA400</h2>
+            <div class="horizontal__item up">
+              <div class="tyre_img_hor">
+                <img src="./images/3.png" alt="" />
               </div>
-              <p class="hoverCurve">MORE</p>
+              <div class="content_hor">
+                <div class="left_content_hor">highway terrain</div>
+                <div class="right_content_hor">Veragua SV</div>
+              </div>
+              <div class="on_hover_tyre_hor">MORE</div>
             </div>
 
-            <!--    slide 2  -->
-            <div class="single-item empty-box"></div>
+            <div class="horizontal__item up_up">
+              <div class="tyre_img_hor">
+                <img src="./images/4.png" alt="" />
+              </div>
+              <div class="content_hor">
+                <div class="left_content_hor">LIGHT TRUCK</div>
+                <div class="right_content_hor">Colmenar</div>
+              </div>
+              <div class="on_hover_tyre_hor">MORE</div>
+            </div>
 
-            <!--    slide 3  -->
-            <div class="single-item empty-box"></div>
+            <div class="horizontal__item up">
+              <div class="tyre_img_hor">
+                <img src="./images/5.png" alt="" />
+              </div>
+              <div class="content_hor">
+                <div class="left_content_hor">4 X 4</div>
+                <div class="right_content_hor">Veragua M/T</div>
+              </div>
+              <div class="on_hover_tyre_hor">MORE</div>
+            </div>
           </div>
         </section>
-      </div>
 
-      <!-- --------------Curved Carousal Section---------- -->
+        <!-- -------------Horizontal Scroll------------ -->
 
-      <!-- -------------Bull Story-------- -->
-      <div class="bullStory">
-        <div class="bullStoryHeading">
-          <h1>the bull <br>story</h1>
+        <!-- --------------Curved Carousal Section---------- -->
+
+        <div class="curvedScroll">
+          <section class="curved_container">
+            <h1 class="durability-header">
+              DURABILITY MEETS VERSATILITY<br />
+              ON EVERY ROAD
+            </h1>
+            <div class="carrousel-wrappper">
+              <!--    slide 1  -->
+              <div class="single-item empty-box"></div>
+              <!--    slide 2  -->
+              <div class="single-item empty-box"></div>
+
+              <!--    slide 1  -->
+              <div class="single-item">
+                <img src="./images/AT200.png" class="curveimage" />
+                <div class="sliderContCurveText">
+                  <h1>Regional</h1>
+                  <h2>SA405</h2>
+                </div>
+                <p class="hoverCurve">MORE</p>
+              </div>
+
+              <!--    slide 2  -->
+              <div class="single-item">
+                <img src="./images/SA400.png" class="curveimage" />
+                <div class="sliderContCurveText">
+                  <h1>Longhaul</h1>
+                  <h2>AT200</h2>
+                </div>
+                <p class="hoverCurve">MORE</p>
+              </div>
+
+              <!--    slide 3  -->
+              <div class="single-item">
+                <img src="./images/SA405.png" class="curveimage" />
+                <div class="sliderContCurveText">
+                  <h1>on&off</h1>
+                  <h2>SA400</h2>
+                </div>
+                <p class="hoverCurve">MORE</p>
+              </div>
+
+              <!--    slide 2  -->
+              <div class="single-item empty-box"></div>
+
+              <!--    slide 3  -->
+              <div class="single-item empty-box"></div>
+            </div>
+          </section>
         </div>
-        <div class="bullStoryOverlay">
-          <div class="bullStoryImage">
-            <img src="./images/bullStoryImage.png" alt="" />
+
+        <!-- --------------Curved Carousal Section---------- -->
+
+        <!-- -------------Bull Story-------- -->
+        <div class="bullStory">
+          <div class="bullStoryHeading">
+            <h1>the bull <br />story</h1>
           </div>
-          <div class="bullStoryText">
-            <h2>The Essence of MatraX: Inspired by Bulls</h2>
+          <div class="bullStoryOverlay">
+            <div class="bullStoryImage">
+              <img src="./images/bullStoryImage.png" alt="" />
+            </div>
+            <div class="bullStoryText">
+              <h2>The Essence of MatraX: Inspired by Bulls</h2>
+              <p>
+                Unveiling a legacy where bull-inspired innovation shapes
+                exceptional design.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- -------------Bull Story-------- -->
+
+        <!-- -------------------Logo Shrink Section------------------ -->
+        <section id="section">
+          <img src="./images/bull.svg" class="bullimg" />
+          <div class="dot"></div>
+        </section>
+
+        <img src="./images/nameLogo.svg" class="nameLogo" />
+        <div class="logoTextSection" style="background-color: rgb(0, 0, 0)">
+          <!-- <div class="emptySection"></div> -->
+          <div class="topTextSction">
+            <h6>Introducing Matoro Tyres</h6>
+            <p>Unyielding Strength, Precision Crafted.</p>
+          </div>
+
+          <div class="bottomTextSection">
+            <h6>Bold Evolution: The Matoro Ethos</h6>
             <p>
-              Unveiling a legacy where bull-inspired innovation shapes
-              exceptional design.
+              Matoro, rising from the heritage of MatraX, embodies the vigor and
+              fortitude of the bull in every thread of its being. Our debut of
+              premium TBR tyres is just the beginning - Matoro is poised to
+              redefine expectations in the PCR domain and beyond. It's an emblem
+              of our relentless drive for excellence, where every product is
+              infused with the spirit of the bull: robust, resilient, and
+              commanding. As Matoro expands its portfolio, it remains rooted in
+              the bedrock principles of MatraX: formidable strength, exceptional
+              performance, and a design that stands the test of time, guiding us
+              along the pathways of progress.
             </p>
           </div>
         </div>
-      </div>
-      <!-- -------------Bull Story-------- -->
+        <!-- -------------------Logo Shrink Section------------------ -->
 
-      <!-- -------------------Logo Shrink Section------------------ -->
-      <section id="section">
-        <img src="./images/bull.svg" class="bullimg" />
-        <div class="dot"></div>
-      </section>
-
-      <img src="./images/nameLogo.svg" class="nameLogo" />
-      <div class="logoTextSection" style="background-color: rgb(0, 0, 0)">
-        <!-- <div class="emptySection"></div> -->
-        <div class="topTextSction">
-          <h6>Introducing Matoro Tyres</h6>
-          <p>Unyielding Strength, Precision Crafted.</p>
-        </div>
-
-        <div class="bottomTextSection">
-          <h6>Bold Evolution: The Matoro Ethos</h6>
-          <p>
-            Matoro, rising from the heritage of MatraX, embodies the vigor and
-            fortitude of the bull in every thread of its being. Our debut of
-            premium TBR tyres is just the beginning - Matoro is poised to
-            redefine expectations in the PCR domain and beyond. It's an emblem
-            of our relentless drive for excellence, where every product is
-            infused with the spirit of the bull: robust, resilient, and
-            commanding. As Matoro expands its portfolio, it remains rooted in
-            the bedrock principles of MatraX: formidable strength, exceptional
-            performance, and a design that stands the test of time, guiding us
-            along the pathways of progress.
-          </p>
-        </div>
-      </div>
-      <!-- -------------------Logo Shrink Section------------------ -->
-
-      <!-- ecosystem start -->
-      <section class="eco-section">
+        <!-- ecosystem start -->
+        <section class="eco-section">
           <div class="title-holder">
             <h1 class="title">MATRAX <br />ECOSYSTEM</h1>
           </div>
 
-          <div class="card-text-content" style="margin-bottom: 2rem;">
+          <div class="card-text-content" style="margin-bottom: 2rem">
             <div class="text-container">
               <h4>Explore the MatraX Ecosystem</h4>
               <p>
@@ -345,7 +361,11 @@
               <div class="card-eco" id="card1">
                 <div class="card-title">
                   <span> MatraX Lubricants</span>
-                  <img src="./images/RightArrow.svg" alt="right arrow" class="card-arrow" />
+                  <img
+                    src="./images/RightArrow.svg"
+                    alt="right arrow"
+                    class="card-arrow"
+                  />
                 </div>
                 <div class="card-text">
                   <h6>Engineered for Excellence</h6>
@@ -359,7 +379,11 @@
               <div class="card-eco" id="card2">
                 <div class="card-title">
                   <span> MatraX Lubricants</span>
-                  <img src="./images/RightArrow.svg" alt="right arrow" class="card-arrow" />
+                  <img
+                    src="./images/RightArrow.svg"
+                    alt="right arrow"
+                    class="card-arrow"
+                  />
                 </div>
 
                 <div class="card-text">
@@ -371,31 +395,32 @@
                 </div>
               </div>
             </div>
-        </div>
-      </section>
-      <!-- ecosystem end -->
+          </div>
+        </section>
+        <!-- ecosystem end -->
 
-      <!-- ------------Global Presence-------- -->
-      <section class="globalPresence">
-        <div class="globalPresenceContent">
-          <div class="globalHeader">
-            <h1>Global <br />Presence</h1>
+        <!-- ------------Global Presence-------- -->
+        <section class="globalPresence">
+          <div class="globalPresenceContent">
+            <div class="globalHeader">
+              <h1>Global <br />Presence</h1>
+            </div>
+            <div class="globalPara">
+              <p>
+                Discover our expansive presence, <br />
+                connecting continents with quality <br />
+                and performance.
+              </p>
+            </div>
           </div>
-          <div class="globalPara">
-            <p>
-              Discover our expansive presence, <br />
-              connecting continents with quality <br />
-              and performance.
-            </p>
+          <div class="globalPresenceImage">
+            <div class="gp-div-sm">
+              <img src="./images/MAP.svg" alt="" />
+              <button class="button-global-presence">view</button>
+            </div>
           </div>
-        </div>
-        <div class="globalPresenceImage">
-         <div class="gp-div-sm">
-           <img src="./images/MAP.svg" alt="" />
-           <button class="button-global-presence">view</button>
-         </div>
-        </div>
-      </section>
+        </section>
+      </div>
 
       <!-- ------------Global Presence-------- -->
 
@@ -436,15 +461,15 @@
 
         <div class="footerBottom">
           <div class="footerBottomLeft">
-            <a onclick="lenis.scrollTo('.heroSection')"><p><i class="fa-solid fa-chevron-up"></i>&nbsp;Back to Top</p></a>
+            <a onclick="lenis.scrollTo('.heroSection')"
+              ><p><i class="fa-solid fa-chevron-up"></i>&nbsp;Back to Top</p></a
+            >
           </div>
           <div class="footerBottomRight">
             <p>© 2024 All Rights Reserved | MatraX</p>
           </div>
         </div>
       </footer>
-
-      
 
       <!-- 
       <div class="newpage"></div>
