--- a/index.html
+++ b/index.html
@@ -314,7 +314,10 @@
         </section>
 
         <img src="./images/nameLogo.svg" class="nameLogo" />
-        <div class="logoTextSection" style="background-color: rgb(0, 0, 0)">
+        <div
+          class="logoTextSection"
+          style="background-color: rgb(0, 0, 0); z-index: 99"
+        >
           <!-- <div class="emptySection"></div> -->
           <div class="topTextSction">
             <h6>Introducing Matoro Tyres</h6>
@@ -341,11 +344,14 @@
 
         <!-- ecosystem start -->
         <section class="eco-section">
-          <div class="title-holder">
+          <div class="title-holder" style="z-index: 99">
             <h1 class="title">MATRAX <br />ECOSYSTEM</h1>
           </div>
 
-          <div class="card-text-content" style="margin-bottom: 2rem">
+          <div
+            class="card-text-content"
+            style="z-index: 99; margin-bottom: 2rem"
+          >
             <div class="text-container">
               <h4>Explore the MatraX Ecosystem</h4>
               <p>
